--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
           <source src="http://jcath-drg.s3.amazonaws.com/BigBuck.m4v" type="video/mp4">
       </video>
 
-      <div id="video2" class="vid2" autoplay style="display:none; width:400px; height:300px; background-color:#f0f0f0">
+      <video id="video2" class="vid2" autoplay style="display:none; width:400px; height:300px; background-color:#f0f0f0">
         <source src="http://jcath-drg.s3.amazonaws.com/BigBuck.m4v" type="video/mp4">
           <!--should appear after the video ends-->
-      </div>
+      </video>
 
   </div>
 
