added more ad src's

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
         <source src="http://cdn.http.anno.test.channel4.com/m/1/174055/7/2047111/MUM-HATD170-020_1462888808_93626_17.mp4" type="video/mp4">
       </video>
 
+      <video id="ad3" class="vid3" muted controls="true" style="display:none;" height="300" width="500">
+        <source src="http://cdn.http.anno.test.channel4.com/m/1/174055/77/1340109/CH4_31_02_50_AMV_SYPR030_030_001_93613_17.mp4" type="video/mp4">
+      </video>
+
+      <video id="ad4" class="vid4" muted controls="true" style="display:none;" height="300" width="500">
+        <source src="http://cdn.http.anno.test.channel4.com/m/1/174055/110/1858926/CH4_31_02_50_CH4154DGGEN00021I01_002_1462888026_93623_17.mp4" type="video/mp4">
+      </video>
+
+      <video id="ad5" class="vid5" muted controls="true" style="display:none;" height="300" width="500">
+        <source src="http://rdmedia.bbc.co.uk/dash/ondemand/bbb/2/client_manifest-common_init.mpd" type="video/mp4">
+      </video>
+
   </div>
 
   <script>
